--- a/amplify.yml
+++ b/amplify.yml
@@ -3,50 +3,44 @@ frontend:
   phases:
     preBuild:
       commands:
-        # Install Python, pip, and other necessary tools
+        # Install Python, pip, and necessary dependencies
         - yum install -y python3
         - python3 --version
         - pip3 --version
-        # Install pipenv or other environment managers if required (optional)
         - pip3 install --upgrade pip
-        # Install Python dependencies
+        # Install dependencies from requirements.txt
         - pip3 install -r requirements.txt
     build:
       commands:
-        # Build your Streamlit app (if necessary, e.g., compiling assets or similar tasks)
-        - echo "No build step needed for Streamlit"
+        # Run the Streamlit app
+        - 'streamlit run streamlit_app.py --server.enableCORS false --server.port 8080'
   artifacts:
-    # This is the output directory where Amplify will look for your app build. 
-    # Since Streamlit apps are run directly, no actual artifacts are needed.
-    baseDirectory: /  # Streamlit doesn't produce build artifacts, root directory suffices
+    baseDirectory: /
     files:
-      - '**/*'  # You can specify files, but for Streamlit, leave this as all files
+      - '**/*'
   cache:
-    # Caching to speed up build times (optional)
     paths:
-      - node_modules/**/*  # Optional if using Node.js for frontend assets
       - ~/.cache/pip/**/*
 
 backend:
   phases:
     preBuild:
       commands:
-        - echo "Backend pre-build phase: no backend dependencies for Streamlit"
+        - echo "No backend pre-build needed for Streamlit"
     build:
       commands:
-        - echo "Backend build phase: no backend build needed for Streamlit"
+        - echo "No backend build step needed for Streamlit"
 
 test:
   phases:
     preTest:
       commands:
-        - echo "No pre-tests required"
+        - echo "No pre-tests required for Streamlit"
     test:
       commands:
-        - echo "No tests configured"
+        - echo "No tests configured for Streamlit"
 
 customHeaders:
-  # Add custom headers to the web app
   - pattern: '**/*'
     headers:
       - key: "Content-Type"
