--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,10 @@ frontend:
   phases:
     preBuild:
       commands:
-        # Install Python, pip, and necessary dependencies
-        - yum install -y python3
+        # Check Python and pip versions
         - python3 --version
         - pip3 --version
+        # Upgrade pip if needed
         - pip3 install --upgrade pip
         # Install dependencies from requirements.txt
         - pip3 install -r requirements.txt
@@ -42,7 +42,7 @@ test:
   artifacts:
     baseDirectory: /
     files:
-      - '**/*'  # You still need to provide the artifacts section for the test phase, even if no test files are generated.
+      - '**/*'
 
 customHeaders:
   - pattern: '**/*'
