--- a/amplify.yml
+++ b/amplify.yml
@@ -13,7 +13,7 @@ frontend:
     build:
       commands:
         # Run the Streamlit app
-        - 'streamlit run streamlit_app.py --server.enableCORS false --server.port 8080'
+        - 'streamlit run chatbot.py --server.enableCORS false --server.port 8080'
   artifacts:
     baseDirectory: /
     files:
